re PR debug/26364 ([no unit-at-a-time mode] Uninlined function is marked as inlined)

2008-01-09  Steven Bosscher  <stevenb.gcc@gmail.com>

	PR debug/26364
	* opts.c (decode_options): Disable inlining of functions called
	once if not in unit-at-a-time mode.

From-SVN: r131423